--- a/songs.tex
+++ b/songs.tex
@@ -27,6 +27,8 @@
 \input{songs/indulj-a-vilagba.tex}
 \input{songs/indulj-es-menj.tex}
 \input{songs/itt-vagyok-most-jo-uram.tex}
+\input{songs/jezus-a-mi-oltalmunk.tex}
+\input{songs/jezus-eletem-erom-bekem.tex}
 \input{songs/jezus-nez-ram.tex}
 \input{songs/jezus-var-terad.tex}
 \input{songs/jo-az-urban-bizakodni.tex}
@@ -50,6 +52,7 @@
 \input{songs/mustarmag.tex}
 \input{songs/napfiver-holdnover.tex}
 \input{songs/ne-felj-mert-megvaltottalak.tex}
+\input{songs/ne-felj-ne-aggodj.tex}
 \input{songs/nezz-testver-fel.tex}
 \input{songs/neked-hodolok.tex}
 \input{songs/nincs-mas-isten.tex}
@@ -68,5 +71,7 @@
 \input{songs/urra-var-a-szivunk.tex}
 \input{songs/utad-var-rad.tex}
 \input{songs/vak-ember.tex}
+\input{songs/varj-es-ne-felj.tex}
 \input{songs/vilagnak-krisztus-kell.tex}
+\input{songs/virrassz-meg.tex}
 \input{songs/vizek-felett.tex}
