--- a/songs/add-tovabb.tex
+++ b/songs/add-tovabb.tex
@@ -1,4 +1,4 @@
-\beginsong{Add tovább - !!}
+\beginsong{Add tovább}
 [
   index={Nagy tűz, hatalmas láng}
 ]
@@ -21,7 +21,7 @@
 
   \beginverse
     Az ^első napsu^gár, mi a ^dermedt tavaszi ^földre száll. \echo{tavaszi ^földre száll}
-    ^Melegét szórja ^rád, és a ^fák rügyeiket ^kibontják. \echo{rügyeiket ^kibontják}
+    ^Melegét szórja ^rád, és a ^fák rügyeiket ^kibontják. \echo{^kibontják}
   \endverse
 
   \beginverse*
