--- a/songs/almaimbol-lelkembol.tex
+++ b/songs/almaimbol-lelkembol.tex
@@ -1,32 +1,35 @@
-\beginsong{Álmaimból, lelkemből - !Előjáték!}[]
+\beginsong{Álmaimból, lelkemből}
+[
+  li={Kék könyv / 12.B}
+]
 
   \ifchorded
     \beginverse*
        {\nolyrics Előjáték:
        \[Hm] \[F#m] \[G] \[F#m] \[G] \[G] \[A] \[A]
-       \[Hm] \[F#m] \[G] \[F#m] \[G] \[A] \[A] \[G] \[G] \[D]}
+       \[Hm] \[F#m] \[G] \[F#m] \[G] \[A] \[A] \[G] \[G] \[D] \[A]}
     \endverse
   \fi
 
   \beginverse\memorize
-    \[D] Szürke a \[G]föld, szürke az \[D]ég, kopár az \[G]út, s csillag sem \[D]ég,
-    Elcsüggedt \[Em]szívű magányos \[A]vándor, hova \[D]m\[A]ész?
-    \[D]Ne menj to\[G]vább, nem futhatsz \[D]el, csak rajtad \[G]áll, csak tenned \[D]kell
-    Elcsüggedt \[Em]szívű magányos \[A]vándor van \[D]re\[A]mény!
+    \[D] Szürke a \[G]föld és szürke az \[D]ég, kopár az \[G]út és csillag sem \[D]ég,
+    Elcsüggedt \[Em]szívű, magányos \[A]vándor, hova \[D]m\[A]ész?
+    \[D] Ne menj to\[G]vább, nem futhatsz \[D]el, csak rajtad \[G]áll, csak tenned \[D]kell,
+    Elcsüggedt \[Em]szívű, magányos \[A]vándor, van re\[D]m\[A]ény!
   \endverse
 
   \beginchorus
-    /: \[A] Álmaim\[Hm]ból, lelkem\[F#m]ből, két kezem\[G]ből, szívem\[F#m]ből
+    /: \[A] Álmaim\[Hm]ból, lelkem\[F#m]ből, két kezem\[G]ből, szívem\[F#m]ből,
     Szól ez a \[G]dal, tied a \[A]dal,
-    Zengjen a \[Hm]dal a szíved\[F#m]ben, gyulladjon \[G]fény a lelked\[F#m]ben,
+    Zengjen a \[Hm]dal szíved\[F#m]ben, gyulladjon \[G]fény a lelked\[F#m]ben,
     Vezesse \[G]lépteidet az \[A]Isten, vezesse \[G]életed! \[G] \[D] :/ \rep{2}
   \endchorus
 
   \beginverse
     ^ Valami^kor így éltem ^én, azt hittem ^már nincs is re^mény
-    Elcsüggedt ^szívű magányos ^vándor, voltam {^^é}n!
-    ^Valaki ^jött, rám neve^tett: Ne menj to^vább, nyújtsd a ke^zed,
-    Elcsüggedt ^szívű magányos ^vándor, sose ^f^élj!
+    Elcsüggedt ^szívű, magányos ^vándor voltam {^^é}n!
+    ^ Valaki ^jött, rám neve^tett: Ne menj to^vább, nyújtsd a ke^zed,
+    Elcsüggedt ^szívű, magányos ^vándor, sose ^f^élj!
   \endverse
 
   \beginverse*
