--- a/songs/atyam-ket-kezedben.tex
+++ b/songs/atyam-ket-kezedben.tex
@@ -31,7 +31,7 @@
   \endverse
 
   \beginverse*
-    Refrén (A legvégén G nélkül.)
+    Refrén \ifchorded{\nolyrics (A legvégén \[G] nélkül.)}\fi
   \endverse
 
 \endsong
