--- a/songs/beke-napja-kozel.tex
+++ b/songs/beke-napja-kozel.tex
@@ -1,8 +1,8 @@
-\beginsong{A béke napja közel - !!}[]
+\beginsong{A béke napja közel}[]
 
-  \beginverse
-    A \[F]béke \[C]napja köz{\[Dm A#]e}l, \[F]nézd, már \[A#]fénylik a \[C]jel! \[?C7?]
-    \[F]Jézus \[A]szíve a \[A#]földön, az \[F]ég\[?C?]en \[F]mindent \[C]egybeöl\[F]el.
+  \beginverse*
+    A \[F]béke \[C]napja köz{\[Dm A#]e}l, \[F]nézd, már \[A#]fénylik a \[C]jel! \[C7]
+    \[F]Jézus \[A]szíve a \[A#]földön, az \[F]é\[C]gen \[F]mindent \[C]egybeöl\[F]el.
   \endverse
 
 \endsong
