--- a/songs/boldogsag-orom.tex
+++ b/songs/boldogsag-orom.tex
@@ -1,4 +1,7 @@
-\beginsong{Boldogság, öröm - !!!!!!}[]
+\beginsong{Boldogság, öröm}
+[
+  li={Kék könyv / 48.}
+]
 
   \ifchorded
     \beginverse*
@@ -17,14 +20,16 @@
     \[G]Boldogság, öröm az élete\[Am]m,
     \[D]Akárhová \[D7]megyek, kell, hogy vi\[G]gyem.
     \[E]Örömöm Jézus adta ne\[Am]kem,
-    Hogy \[D]ne csak az e\[D7]nyém, de \[D#7]mindenkié \[D7]legye\[G]n! \[F#] \[F]
+    Hogy \[D]ne csak az e\[D7]nyém, de \[D#7]mindenkié \[D7]legye\[G]n! \[G] \[F#] \[F]
+    \[E]Örömöm Jézus adta ne\[Am]kem,
+    Hogy \[D]ne csak az e\[D7]nyém, de \[D#7]mindenkié \[D7]legye\[G]n!
   \endchorus
 
   \beginverse
     Ha ^valaki nézi a ^két szemem,
     Ha ^valaki fogja a ^két kezem,
-    ^Megtudja-e rólam, hogy ^Jézus vár,
-    És ^boldog-e az ^ember, ha ^az Ő útján jár?
+    ^Megérzi-e bennem, hogy ^Jézus vár,
+    És ^jó, hogyha az ^ember az ^Ő útján jár!
   \endverse
 
   \beginverse*
