--- a/songs/feny-ami-bennem-eg.tex
+++ b/songs/feny-ami-bennem-eg.tex
@@ -1,14 +1,17 @@
-\beginsong{A fény, ami bennem ég - !!}[]
+\beginsong{A fény, ami bennem ég}[]
 
   \beginverse\memorize
-    A \[G]fény, ami bennem ég nem fog már kihunyni,
+    A \[G]fény, ami bennem ég, nem fog már kihunyni,
     A \[C]fényt, ami bennem ég, \[G]égni hagyom már. \echo{Hej babám!}
-    A fény, ami bennem ég \[H7]sugározzon \[Em]szét,
+    A fény, ami bennem ég, \[H7]sugározzon \[Em]szét,
     Legyen \[G]fény, legyen \[D]fény, legyen \[G]fény! \[C] \[G] \[D]
   \endverse
 
   \beginverse
-    A fény, ami Krisztusé…
+    A ^fény, ami Krisztusé, nem fog már kihunyni,
+    A ^fényt, ami Krisztusé, ^égni hagyom már. \echo{Hej babám!}
+    A fény, ami Krisztusé, ^sugározzon ^szét,
+    Legyen ^fény, legyen ^fény, legyen ^fény! ^ ^ ^
   \endverse
 
   \beginverse
@@ -18,7 +21,9 @@
     Legyen ^fény, legyen ^fény, legyen ^fény! ^ ^ ^
   \endverse
 
-  \versesep=0pt
+  % \versesep=0pt
+
+  \chordsoff
 
   \beginverse
     Budaörs minden sarkában…
@@ -33,5 +38,7 @@
     Sopron minden sarkában…
     Sydney minden sarkában…
   \endverse
+
+  \chordson
 
 \endsong
