--- a/songs/halat-adok-az-esti-oran.tex
+++ b/songs/halat-adok-az-esti-oran.tex
@@ -1,4 +1,4 @@
-\beginsong{Hálát adok az esti órán - !sorrend, változatok!}
+\beginsong{Hálát adok az esti órán}
 [
   index={Esti ima}
 ]
@@ -20,14 +20,15 @@
   \endverse
 
   \beginverse
-    ^Hálá^t adok, hogy ^?adtál / küldtél? ^testvért
+    ^Hálá^t adok, hogy ^küldtél ^testvért
     ^Társkén^t, aki ma ^mellém ^állt.
     ^Hálá^t adok, hogy ^megen^gedted
     ^Azt is, ^ami ^fájt.
   \endverse
 
   \beginverse
-    ^Hálá^t adok, hogy ^?Tested / Igéd? ^táplált,
+    ^Hálá^t adok, hogy ^Tested ^táplált,
+    % Igéd
     ^Hálá^t, hogy ma is ^szólt sza^vad.
     ^Hálá^t adok, hogy ^lelkem ^biztos
     ^Cél fe^lé ha^lad.
@@ -35,7 +36,8 @@
 
   \beginverse
     ^Hálá^t adok, hogy ^mellém ^álltál,
-    ^Hálá^t adok, hogy ?szép az / van jó? ^ottho^nom.
+    ^Hálá^t adok, hogy szép az ^ottho^nom.
+    % van jó?
     ^Hálá^t, hogy munkám ^elvé^geztem,
     ^S békén ^alha^tom.
   \endverse
@@ -50,7 +52,7 @@
   \beginverse
     ^Hálá^t adok, hogy ^szemed ^rajtam,
     ^Hálá^t adok, hogy ^reményt ^adsz.
-    ^Hálá^t adok, ?hogy / mert? ^biztos ^eljössz,
+    ^Hálá^t adok, hogy ^biztos ^eljössz,
     ^Mint a ^virra^dat.
   \endverse
 
