--- a/songs/kesz-az-en-szivem.tex
+++ b/songs/kesz-az-en-szivem.tex
@@ -1,4 +1,4 @@
-\beginsong{Kész az én szívem - !! (Lejjebb?Följebb)}[]
+\beginsong{Kész az én szívem}[]
 
   \ifchorded
     \beginverse*
@@ -13,7 +13,7 @@
 
   \beginchorus
     /: Szent az \[Dm]Úr, jó az Úr, hirde\[Gm]tem a népek \[Dm]között,
-    Mert az Ő hűsé\[Gm]ge az égig \[Dm]ér. \[A] \[A4] \[A] \[Dm] :/ \rep{2}
+    Mert az Ő kegyel\[Gm]me felhőkig \[Dm]ér. \[A-A4$^{\;(csak\;ismétlésnél)}$]{\ifchorded\hspace{1cm}\fi:/ \rep{2}}
   \endchorus
 
   \beginverse
@@ -23,7 +23,7 @@
 
   \beginchorus
     /: Szent az \[Dm]Úr, jó az Úr, hirde\[Gm]tem a népek \[Dm]között,
-    Mert az Ő kegyel\[Gm]me felhőkig \[Dm]ér. \[A] \[A4] \[A] \[Dm] :/ \rep{2}
+    Mert az Ő hűsé\[Gm]ge az égig \[Dm]ér. \[A-A4$^{\;(csak\;ismétlésnél)}$]{\ifchorded\hspace{1cm}\fi:/ \rep{2}}
   \endchorus
 
 \endsong
