--- a/songs/lelkem-az-urat-dicserd.tex
+++ b/songs/lelkem-az-urat-dicserd.tex
@@ -1,4 +1,8 @@
-\beginsong{Lelkem, az Urat dicsérd - !!}[]
+\beginsong{Lelkem, az Urat dicsérd}
+[
+  index={Az Úr dicsérete},
+  li={Kék könyv / 40.}
+]
 
   \ifchorded
     \beginverse*
@@ -12,12 +16,8 @@
   \endchorus
 
   \beginverse\memorize
-    \[F]Lelkem, az \[C]Urat di\[F]csérd, \[Gm]áldjad ?a mindenség / az \[C]istenek? \[F]Isten\[C]ét!
+    \[F]Lelkem, az \[C]Urat di\[F]csérd, \[Gm]áldjad az \[C]istenek \[F]Isten\[C]ét!
     \[F]Jósága \[C]végtelen \[F]él, \[Gm]irgalma \[C]megmarad \[F] örök\[C]ké!
-  \endverse
-
-  \beginverse*
-    Refrén
   \endverse
 
   \beginverse
@@ -26,8 +26,8 @@
   \endverse
 
   \beginverse
-    ^Nagyságod ^mérhetet^len, ^Dicsőséged ^fenség, ^fényes^ség.
-    ^Csodálva ^éneke^lem ^félelmes ^tettei ^? ere^jét.
+    ^Nagyságod ^mérhetet^len, ^dicsőséged ^fenség, ^fényes^ség.
+    ^Csodálva ^éneke^lem ^félelmes ^tetteid ^ ere^jét.
   \endverse
 
   \beginverse
