--- a/songs/nincs-mas-isten.tex
+++ b/songs/nincs-mas-isten.tex
@@ -5,6 +5,12 @@
   index={Nálad lett borrá a víz}
 ]
 
+  \ifchorded
+    \beginverse*
+      {\nolyrics Előjáték: /: \[Em7] \[Cadd2] \[G] \[D/F#] :/ \rep{2}}
+    \endverse
+  \fi
+
   \beginverse\memorize
     \[Em]Nálad lett \[C]borrá a \[Em]víz, \[C] h\[Em]oltakat \[C]életre \[G]hívsz,
     Nincs más \[Am7]isten, nincsen \[D]más.
