--- a/songs/oly-jo-aldani.tex
+++ b/songs/oly-jo-aldani.tex
@@ -44,10 +44,12 @@
     ^Gitár húr^ja^in magasz^ta^lom uj^jong^va csodái^dat! ^ ^ ^ ^
   \endverse
 
-  \chordsoff
+  % \ifchorded
+  %   \chordsoff
+  % \fi
 
     \beginverse
-      Uram jó voltál énhozzám,
+      ^Uram jó voltál énhozzám,
       Életemben nagy dolgokat műveltél sok év során.
     \endverse
 
@@ -56,7 +58,9 @@
       Oly’ irgalmasan jó, gondoskodó Istenem, égi Atyám.
     \endverse
 
-  \chordson
+  % \ifchorded
+  %   \chordson
+  % \fi
 
   \beginverse
     ^Hála di^cső^ség Ne^ved^nek, ^ ^ ^ ^
