--- a/songs/tancolj-az-urnak.tex
+++ b/songs/tancolj-az-urnak.tex
@@ -1,4 +1,13 @@
-\beginsong{Táncolj az Úrnak - !!}[]
+\beginsong{Táncolj az Úrnak}
+[
+  li={Kék könyv / 201.}
+]
+
+  \ifchorded
+    \beginverse*
+      {\nolyrics Előjáték: /: \[Em] \[D] \[Em] \[Hm] \[G] \[D] \[Em] \[Hm] \[Em] :/ \rep{2}}
+    \endverse
+  \fi
 
   \beginchorus
     /: \[Em]Táncolj az \[D]Úrnak, \[Em]dicsérjed ne\[Hm]vét!
@@ -26,7 +35,10 @@
     ^Hódol^junk ^szí^ne e^lőtt!
   \endverse
 
-\endsong
+  \ifchorded
+    \beginverse*
+      {\nolyrics Utójáték: /: \[Em] \[D] \[Em] \[Hm] \[G] \[D] \[Em] \[Hm] \[Em] :/ \rep{2}}
+    \endverse
+  \fi
 
-\begin{intersong*}
-\end{intersong*}
+\endsong
