--- a/songs/uram-tehozzad-futok.tex
+++ b/songs/uram-tehozzad-futok.tex
@@ -1,20 +1,27 @@
 \beginsong{Uram, Tehozzád futok}[]
 
-  \beginverse\memorize
+  \beginverse*\memorize
     Uram, \[Em]Tehozzád fu\[D]tok, élő \[Hm7]vízre szomja\[Em]zom,
-    Közel\[C]séged, ó mily \[D]jó énne?é\[Em]kem. \[Em!]
+    Közel\[C]séged, ó mily \[D]jó énné\[Em]kem. \[Em!]
   \endverse
 
-  \beginverse
+  \beginverse*
     Kérlek, ^ne menj el tő^lem, légy min^dig segítsé^gem,
     Úgy kí^vánlak Té^ged, Iste^nem. ^
   \endverse
-  
-  \beginverse
+
+  \beginverse*
     Én pedig \[G]szüntelen remé\[D]lek, egyre \[Hm7]jobban dicsér\[Em]lek,
     Ajkam \[Am7]beszéli a Te \[Am/F#]igazságo\[H4]dat. \[H]
     Hadd le\[G]gyen most a da\[D]lom jó i\[Hm]llat oltáro\[Em]don,
     Nagyon \[C]szeretlek Té\[D]ged, Jézu\[Em]som. \[Em!]
   \endverse
-  
+
+  \beginverse*
+    \textnote{A legvégén:}
+    Nagyon \[C]szeretlek Té\[D]ged,
+    Nagyon \[C]szeretlek Té\[D]ged,
+    Nagyon \[C]szeretlek Té\[D]ged, Jézu\[Em]som. \[Em!]
+  \endverse
+
 \endsong
