--- a/songs/urra-var-a-szivunk.tex
+++ b/songs/urra-var-a-szivunk.tex
@@ -1,9 +1,9 @@
 \beginsong{Az Úrra vár a szivünk}[]
 
-  \beginchorus
-    Az \[Dm]Úrra \[C]vár a szi\[F]vünk.
+  \beginverse*
+    Az \[Dm]Úrra \[C]vár a szi\[F]vünk,
     Ő\[Gm]benne \[Dm]minden \[A]örö\[Dm]münk.
-  \endchorus
+  \endverse
 
   \ifchorded
     \beginverse*
