--- a/songs/vak-ember.tex
+++ b/songs/vak-ember.tex
@@ -1,4 +1,4 @@
-\beginsong{A vak ember - !!}[]
+\beginsong{A vak ember}[]
 
   \versesep=12pt plus 3pt minus 8pt
 
@@ -23,8 +23,8 @@
   \endverse
 
   \beginverse
-    A ^néma is ^az úton ^ül és tátog, \rep{2}
-    A \[Am]néma is \[G]az úton \[F]ül és \[E]kiált: -- ez itt így jó?
+    A ^néma is ^az úton ^ül és (tátog), \rep{2}
+    A \[Am]néma is \[G]az úton \[F]ül és \[E]kiált:
   \endverse
 
   \beginverse
@@ -34,22 +34,22 @@
   \beginverse
     De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált, \rep{3}
     Oh, oh, \[E7]oh!
-    Én vagyok az {\[Am G F]ú}t, az igazs{\[Am G F]á}g, és az élet,
+    Én vagyok az {\[Am G F]ú}t, \[E]az igazs{\[Am G F]á}g, és az él{\[Am G F]e}t,
     Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endverse
 
   \beginverse*
-    \[Am]Jézus \rep{2}
+    \[Am]Jézus \echo{taps} \rep{2}
   \endverse
 
   \beginverse*
     Oh, oh, \[E7]oh!
-    Én vagyok az {\[Am G F]ú}t, az igazs{\[Am G F]á}g, és az élet,
+    Én vagyok az {\[Am G F]ú}t, \[E]az igazs{\[Am G F]á}g, és az él{\[Am G F]e}t,
     Ami haza\[E]visz! Oh-\[E7]oh-oh, \[E]oh-oh, \[E7]oh-oh!
   \endverse
 
   \beginverse*
-    \[Am]Jézus
+    \[Am]Jézus \echo{taps}
   \endverse
 
 \endsong
