--- a/songs/vilagnak-krisztus-kell.tex
+++ b/songs/vilagnak-krisztus-kell.tex
@@ -1,4 +1,4 @@
-\beginsong{A világnak Krisztus kell - Versszakok - ismétlés?}[]
+\beginsong{A világnak Krisztus kell}[]
 
   \ifchorded
     \beginverse*
@@ -13,7 +13,7 @@
     \[A]mivel te \[E]Krisztushoz \[H7]tartoz\[E]ol! :/ \rep{2}
   \endchorus
 
-  \beginverse
+  \beginverse*
     \[A]Emlé\[E]kezz! \[A]Emlé\[E]kezz, te \[E]Krisztushoz \[H7]tartoz\[E]ol.
   \endverse
 
