--- a/songs/krisztus-el-bennem.tex
+++ b/songs/krisztus-el-bennem.tex
@@ -1,4 +1,4 @@
-\beginsong{Krisztus él bennem - nanananana}[]
+\beginsong{Krisztus él bennem}[]
 
   \ifchorded
     \beginverse*
@@ -10,11 +10,17 @@
     \[G]Krisztus él bennem, \[D]szívem virágzik.
     A \[Em]sötét nem győz, hát \[C]nem kell pánik.
     \[G]Jézus \[D]életét \[C]adta, hogy \[D]élj!
+
+    \vspace{0.3cm}
+
     \[G]Krisztus él benned, \[D]ne légy lekvár,
     Hisz \[Em]oly sok kincs van, mi \[C]téged is vár!
     Hát \[G]kelj fel, \[D]indulj és \[C]Krisztussal \[D]járj!
 
-    Na na na...
+    \vspace{0.3cm}
+
+    /: Na-na-na, \[G]na na na \[D]na, na-na-na, \[Em]na na na \[C]na,
+    na-na-na, \[G]na na na, \[D]na na na, \[C]na na! \[D] :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
