--- a/songs/teremts-bennem.tex
+++ b/songs/teremts-bennem.tex
@@ -1,30 +1,24 @@
-\beginsong{Teremts bennem - !!}[]
+\beginsong{Teremts bennem}
+[
+  li={Kék könyv / 208.}
+]
 
-  \beginchorus
-    \[G]Teremts bennem \[D]tiszta szí\[C]vet, ó U\[G]ram!
+  \beginverse*
+    /: \[G]Teremts bennem \[D]tiszta szí\[C]vet, ó U\[G]ram!
     Az \[Em]erős lelket \[D]újítsd meg ben\[G-C]nem! \[G]
-
     \[G]Teremts bennem \[D]tiszta szí\[C]vet, ó U\[G]ram!
-    Az \[Em]erős lelket \[D]újítsd meg ben\[G]nem! \[G]
-  \endchorus
-
-  \beginverse
-    \[Am]Ne vess el en\[D]gem a te or\[G]cád e\[Em7]lől!
-    \[Am]Szentlelked \[D]ne vondd meg tő\[G]lem! \[G7]
-    \[Am]Támogass az \[D]engedelmes\[G]ség lelké\[Em7]vel!
-    \[Am7]Szabadításod \[D7]örömét add ne\[G]kem! \[G7]
+    Az \[Em]erős lelket \[D]újítsd meg ben\[G-C]nem! \[G] :/ \rep{2}
   \endverse
 
   \beginverse*
-    Refrén
+    /: \[Am]Ne vess el en\[D]gem a Te or\[G]cád e\[E]lől!
+    \[Am]Szentlelked \[D]ne vondd meg tő\[G]lem! \[G7]
+    \[Am]Támogass az \[D]engedelmes\[G]ség lelké\[Em]vel!
+    \[Am7]Szabadításod \[D7]örömét add ne\[G]kem! \[G7] :/ \rep{2}
   \endverse
 
-  \beginverse
-    \[Am]Ne vess el en\[D]gem a te or\[G]cád e\[Em7]lől!
-    \[Am]Szentlelked \[D]ne vondd meg tő\[G]lem! \[G7]
-    \[Am]Támogass az \[D]engedelmes\[G]ség lelké\[Em7]vel!
-    \[Am7]Szabadításod \[D7]örömét add ne\[G]kem!
+  \beginverse*
     \[Am7]Szabadításod \[D7]örömét add ne\[G-C]kem! \[G]
   \endverse
-  
+
 \endsong
