--- a/songs/utad-var-rad.tex
+++ b/songs/utad-var-rad.tex
@@ -1,8 +1,8 @@
-\beginsong{Utad vár rád - !!}[]
+\beginsong{Utad vár rád}[]
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[Dm] \[F] \[C] \[Dm!] \[A!]}
+      {\nolyrics Előjáték: \[Dm-Dm4-Dm] \[F-F2-F] \[C-C4-C] \[Dm!-A!]}
     \endverse
   \fi
 
