Small fixes (mainly for parsing)

--- a/songs/atyam-tied-vagyok.tex
+++ b/songs/atyam-tied-vagyok.tex
@@ -2,17 +2,17 @@
 
   \beginverse\memorize
     \[C]Atyám Tied \[F]vagyok, és \[G]szüntelen i\[C]mádlak!
-    \[C]Dicsõség \[F]szent neved\[G4]nek! \[G7]
+    \[C]Dicsőség \[F]szent neved\[G4]nek! \[G7]
   \endverse
 
   \beginchorus
-    \[C]Dicsõség ne\[F]vednek, \[E]dicsõség ne\[Am]vednek,
-    \[F]Dicsõség \[G]szent neved\[F]nek! \[C]
+    \[C]Dicsőség ne\[F]vednek, \[E]dicsőség ne\[Am]vednek,
+    \[F]Dicsőség \[G]szent neved\[F]nek! \[C]
   \endchorus
 
   \beginverse
     ^Jézus Tied ^vagyok, és ^szüntelen i^mádlak!
-    ^Dicsõség ^szent neved^nek! ^
+    ^Dicsőség ^szent neved^nek! ^
   \endverse
 
   \beginverse*
@@ -21,7 +21,7 @@
 
   \beginverse
     ^Lélek, Tied ^vagyok, és ^szüntelen i^mádlak!
-    ^Dicsõség ^szent neved^nek! ^
+    ^Dicsőség ^szent neved^nek! ^
   \endverse
 
   \beginverse*
