--- a/songs/feny-ami-bennem-eg.tex
+++ b/songs/feny-ami-bennem-eg.tex
@@ -26,17 +26,17 @@
   \chordsoff
 
   \beginverse
-    Budaörs minden sarkában…
-    A Szent Imre minden sarkában…
-    A Szent Ferenc minden sarkában…
-    Szentendre minden sarkában…
-    Fehérvár minden sarában…
-    Kanizsa minden sarkában…
-    Szeged minden sarkában…
-    Kaposvár minden sarkában…
-    Pécs minden sarkában…
-    Sopron minden sarkában…
-    Sydney minden sarkában…
+    Budaörs minden sarkában...
+    A Szent Imre minden sarkában...
+    A Szent Ferenc minden sarkában...
+    Szentendre minden sarkában...
+    Fehérvár minden sarában...
+    Kanizsa minden sarkában...
+    Szeged minden sarkában...
+    Kaposvár minden sarkában...
+    Pécs minden sarkában...
+    Sopron minden sarkában...
+    Sydney minden sarkában...
   \endverse
 
   \chordson
