--- a/songs/ha-jon-az-ur.tex
+++ b/songs/ha-jon-az-ur.tex
@@ -27,13 +27,13 @@
   \endverse
 
   \beginverse
-    A mennyben ^fenn, oly’ nagy a csend, elvétve egy-két hárfa ^zeng,
+    A mennyben ^fenn, oly' nagy a csend, elvétve egy-két hárfa ^zeng,
     De nem így ^lesz, ó, ^alle^luja, ^ ha egyszer ^én is ^ott le^szek! ^ ^
   \endverse
 
   \beginverse
     Nem sakko^zik, nem golfozik, egy rendes angyal nem i^szik,
-    Így éne^kel, ó ^alle^luja, ^ miközben ^rock n’ ^rollo^zik! ^ ^
+    Így éne^kel, ó ^alle^luja, ^ miközben ^rock n' ^rollo^zik! ^ ^
   \endverse
 
 \endsong
