--- a/songs/oly-jo-aldani.tex
+++ b/songs/oly-jo-aldani.tex
@@ -25,7 +25,7 @@
   \fi
 
   \beginverse\memorize
-    \[A]Oly’ jó ál\[E]dan\[A]i az \[E]Ur\[A]at, \[A] \[E] \[A] \[E]
+    \[A]Oly' jó ál\[E]dan\[A]i az \[E]Ur\[A]at, \[A] \[E] \[A] \[E]
     \[E]Ujjongó\[A]an \[E]jó Is\[A]ten\[E]nek zen\[A]ge\[D]ni zsoltáro\[A]kat. \[A] \[E] \[A] \[E]
   \endverse
 
@@ -55,7 +55,7 @@
 
     \beginverse
       Sziklám, oltalmam Te voltál,
-      Oly’ irgalmasan jó, gondoskodó Istenem, égi Atyám.
+      Oly' irgalmasan jó, gondoskodó Istenem, égi Atyám.
     \endverse
 
   % \ifchorded
