--- a/songs/rajta-dicserjetek-az-ur-nevet.tex
+++ b/songs/rajta-dicserjetek-az-ur-nevet.tex
@@ -25,7 +25,7 @@
   \endverse
 
   \beginverse
-    Lássátok ^hát, mily’ irgalmas hoz^zánk,
+    Lássátok ^hát, mily' irgalmas hoz^zánk,
     Jóságos ^Úr és hűséges Ki^r^ály.
     Énekel^jétek hát az Ő ne^vét,
     Istent di^csérje minden teremt^mény!
