--- a/songs/tancolj-az-urnak.tex
+++ b/songs/tancolj-az-urnak.tex
@@ -11,7 +11,7 @@
 
   \beginchorus
     /: \[Em]Táncolj az \[D]Úrnak, \[Em]dicsérjed ne\[Hm]vét!
-    \[G]Ujjongj, hisz’ \[D]Ő a te \[Em]Meg\[Hm]vál\[Em]tód! :/ \rep{2}
+    \[G]Ujjongj, hisz' \[D]Ő a te \[Em]Meg\[Hm]vál\[Em]tód! :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
