--- a/songs/atyam-ket-kezedben.tex
+++ b/songs/atyam-ket-kezedben.tex
@@ -2,13 +2,13 @@
 
   \beginverse\memorize
     \[Dm]Atyám, két ke\[C]zedben, \[A7]csak ott lakha\[Dm]tom,
-    \[F]Biztonságot \[C]csak Tõled ka\[Dm]pok. \[G]
+    \[F]Biztonságot \[C]csak Tőled ka\[Dm]pok. \[G]
     \[Dm]Újjá így te\[C]remtesz, \[A7]sebem ápo\[Dm]lod,
     \[F]Boldogság, hogy \[C]itt van ottho\[Dm]nom. \[G]
   \endverse
 
   \beginchorus
-    /: \[F]Tarts meg két ke\[C]zedben, \[A7]õrizz meg U\[Dm]ram,
+    /: \[F]Tarts meg két ke\[C]zedben, \[A7]őrizz meg U\[Dm]ram,
     \[F]Oltalmadban \[C]rejtsd el sorso\[Dm]mat! \[G] :/ \rep{2}
   \endchorus
 
