--- a/songs/napfiver-holdnover.tex
+++ b/songs/napfiver-holdnover.tex
@@ -8,7 +8,7 @@
 
   \beginverse\memorize
     \[D]Fivérem \[F#m]Nap, és \[G]nő\[A]vérem \[D]Hold,
-    \[Hm]Oly’ ritkán \[F#m]látlak, s \[G]hallom \[A]hango\[D]tok.
+    \[Hm]Oly' ritkán \[F#m]látlak, s \[G]hallom \[A]hango\[D]tok.
     \[Hm] Nyomaszt a \[F#m]sok \[G]gyötre\[A]lem és \[D]gond.
   \endverse
 
