--- a/songs/peter-ne-sirj.tex
+++ b/songs/peter-ne-sirj.tex
@@ -3,13 +3,13 @@
   \beginverse\memorize
     \[Em]Sírásodat hagyd nyugodtan abba,
     A kapuk mögött vissza\[Em/F#]állt a \[G]rend!
-    \[Am]Ne sírj, oly’ lágyan jár a \[Em]szél
+    \[Am]Ne sírj, oly' lágyan jár a \[Em]szél
     \[C]Róma s a \[D]Via Appia fe\[Em]lett!
   \endverse
 
   \beginchorus
     \[Am]Péter, ne \[Em]sírj, mert \[H7]Jézus megbo\[Em]csát,
-    \[Am]Péter, ne \[Em]sírj, hisz’ \[H7]tudod, hogy megbo\[Em]csát!
+    \[Am]Péter, ne \[Em]sírj, hisz' \[H7]tudod, hogy megbo\[Em]csát!
   \endchorus
 
   \beginverse
