Small fixes by Eszter

--- a/songs/atyam-ket-kezedben.tex
+++ b/songs/atyam-ket-kezedben.tex
@@ -1,4 +1,4 @@
-\beginsong{Atyám két kezedben}[]
+\beginsong{Atyám, két kezedben}[]
 
   \beginverse\memorize
     \[Dm]Atyám, két ke\[C]zedben, \[A7]csak ott lakha\[Dm]tom,
