--- a/songs/atyam-tied-vagyok.tex
+++ b/songs/atyam-tied-vagyok.tex
@@ -1,7 +1,7 @@
-\beginsong{Atyám tied vagyok}[]
+\beginsong{Atyám, Tied vagyok}[]
 
   \beginverse\memorize
-    \[C]Atyám Tied \[F]vagyok, és \[G]szüntelen i\[C]mádlak!
+    \[C]Atyám, Tied \[F]vagyok, és \[G]szüntelen i\[C]mádlak!
     \[C]Dicsőség \[F]szent neved\[G4]nek! \[G7]
   \endverse
 
@@ -11,7 +11,7 @@
   \endchorus
 
   \beginverse
-    ^Jézus Tied ^vagyok, és ^szüntelen i^mádlak!
+    ^Jézus, Tied ^vagyok, és ^szüntelen i^mádlak!
     ^Dicsőség ^szent neved^nek! ^
   \endverse
 
