--- a/songs/ebredj-ember.tex
+++ b/songs/ebredj-ember.tex
@@ -12,8 +12,8 @@
   \fi
 
   \beginverse
-    Ébredj \[C]ember \[G] mély álmod\[Am]ból, \[F] Jézus \[C]megment \[Dm] rabságod\[G]ból!
-    Hogyha \[Am]hívod, \[Em] eljön \[F]Ő, egész \[C]bensőm \[Dm] imádjad \[G]Őt!
+    Ébredj, \[C]ember, \[G] mély álmod\[Am]ból, \[F] Jézus \[C]megment \[Dm] rabságod\[G]ból!
+    Hogyha \[Am]hívod, \[Em] eljön \[F]Ő, egész \[C]bensőm, \[Dm] imádjad \[G]Őt!
   \endverse
 
   \beginchorus
@@ -38,7 +38,7 @@
   \endchorus
 
   \beginverse\memorize
-    Áldjad \[D]lelkem \[A] az Úr ne\[Hm]vét, \[G] mert meg\[D]tartja \[Em] ígére\[A]tét!
+    Áldjad, \[D]lelkem, \[A] az Úr ne\[Hm]vét, \[G] mert meg\[D]tartja \[Em] ígére\[A]tét!
     Mennyi \[Hm]jót tett \[F#m] az Úr ve\[G]lem, Reá \[D]bízom \[Em] az éle\[A]tem.
   \endverse
 
