--- a/songs/hus-ver-templom.tex
+++ b/songs/hus-ver-templom.tex
@@ -1,6 +1,6 @@
 \beginsong{Hús-vér templom}
 [
-by={Pintér Béla}
+  by={Pintér Béla}
 ]
 
   \ifchorded
@@ -11,15 +11,15 @@ by={Pintér Béla}
   \fi
 
   \beginchorus
-    /: Nekem \[Dm]nincs más \[Gm]rajtad \[C]kívül \[F]Jézus,
+    /: Nekem \[Dm]nincs más \[Gm]Rajtad \[C]kívül, \[F]Jézus,
     \[Dm]Éle\[Gm]tem for\[C]rása \[F]vagy.
     \[Dm]Kézzel, \[Gm7]lábbal, \[A]szívvel, \[Dm]szájjal
-    \[A#]Dicsérlek Uram. \[A4] \[A] :/ \rep{2}
+    \[A#]Dicsérlek, Uram. \[A4] \[A] :/ \rep{2}
   \endchorus
 
   \beginverse
     Ez a \[Dm]hús-vér \[Gm]templom \[A]Érted \[Dm]épült,
-    Neked \[A#]ég a \[Gm7]tűz, bent \[A]oltárai\[Dm]nál.
+    Neked \[A#]ég a \[Gm7]tűz bent, \[A]oltárai\[Dm]nál.
     Ez a hús-vér \[Gm]templom \[A]Téged \[Dm]dicsér,
     Szívem \[A#]minden \[Gm7]húrja \[A]Rólad muzsi\[Dm]kál.
   \endverse
