Fixed and added some songs

--- a/songs/loyolai-szent-ignac-imaja.tex
+++ b/songs/loyolai-szent-ignac-imaja.tex
@@ -1,4 +1,7 @@
-\beginsong{Loyolai Szent Ignác imája}[]
+\beginsong{Loyolai Szent Ignác imája}
+[
+  index={Fogadd el}
+]
 
   \ifchorded
     \beginverse*
@@ -25,5 +28,11 @@
     ^Csak a ^szeretet ^maradjon e^nyém a ^kegye^lem^mel, ^
     S ^minden, de ^minden ^gazdagság e^nyém, más ^semmi ^nem ^kell!
   \endverse
+
+  \ifchorded
+    \beginverse*
+       {\nolyrics Utójáték: \[C] \[G] \[Am] \[F] \[C] \[G] \[C]}
+    \endverse
+  \fi
 
 \endsong
