--- a/songs.tex
+++ b/songs.tex
@@ -41,10 +41,12 @@
 \input{songs/koszonom-jezus.tex}
 \input{songs/krisztus-el-bennem.tex}
 \input{songs/latod-ujra-este-van.tex}
+\input{songs/lelkem-aldd-az-urat.tex}
 \input{songs/lelkem-az-urat-dicserd.tex}
 \input{songs/loyolai-szent-ignac-imaja.tex}
 \input{songs/melybol-hozzad-szall-szavam.tex}
 \input{songs/mennek-az-asszonyok.tex}
+\input{songs/mert-tudom.tex}
 \input{songs/minden-mi-el.tex}
 \input{songs/minden-nap.tex}
 \input{songs/mint-az-asszony.tex}
@@ -67,6 +69,7 @@
 \input{songs/tancolj-az-urnak.tex}
 \input{songs/terad-var-egy-szep-orszag.tex}
 \input{songs/teremts-bennem.tex}
+\input{songs/tied-a-dicsoseg.tex}
 \input{songs/uram-tehozzad-futok.tex}
 \input{songs/urra-var-a-szivunk.tex}
 \input{songs/utad-var-rad.tex}
