--- a/songs/lelkem-az-urat-dicserd.tex
+++ b/songs/lelkem-az-urat-dicserd.tex
@@ -7,12 +7,12 @@
   \ifchorded
     \beginverse*
        {\nolyrics Előjáték: \[F] \[C7]
-       \[F] \[Gm] \[Am] \[B] \[F] \[C] \[B] \[F]}
+       \[F] \[Gm] \[Am] \[A#] \[F] \[C] \[A#] \[F]}
     \endverse
   \fi
 
   \beginchorus
-    /: \[F]Allelu\[Gm]ja, \[Am]allelu\[B]ja, \[F]allelu\[C]ja, alle\[B]lu\[F]ja! :/ \rep{2}
+    /: \[F]Allelu\[Gm]ja, \[Am]allelu\[A#]ja, \[F]allelu\[C]ja, alle\[A#]lu\[F]ja! :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
