Modified and added songs

--- a/songs/lelkem-aldd-az-urat.tex
+++ b/songs/lelkem-aldd-az-urat.tex
@@ -4,22 +4,22 @@
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[E] \[E4] \[E]}
+       {\nolyrics Előjáték: \[D] \[D4] \[D]}
     \endverse
   \fi
 
   \beginchorus
-    Lelkem, \[A]áldd az Ur\[E]at, \[H/D#]áldd az U\[C#m]rat,
-    \[A]Egyedül \[E]Őt im\[H4]ádd! \[H]
-    Zengj úgy, \[A]mint soha \[C#m]még, \[A]Őt \[H]di\[C#m]csérd!
-    L\[A]elkem csak T\[H]éged \[A/E]áld! \[E] \[A/E] \[E]
+    Lelkem, \[G]áldd az Ur\[D]at, \[A/C#]áldd az U\[Hm]rat,
+    \[G]Egyedül \[D]Őt im\[A4]ádd! \[A]
+    Zengj úgy, \[G]mint soha \[Hm]még, \[G]Őt \[A]di\[Hm]csérd!
+    L\[G]elkem csak T\[A]éged \[G/D]áld! \[D] \[G/D] \[D]
   \endchorus
 
   \beginverse\memorize
-    Egy \[A]új nap k\[E]él, és már \[H]ébred \[C#m]minden,
-    \[A] Itt az id\[E]ő, hogy \[H]áldja\[C#m]lak,
-    És b\[A]ármi \[E]ér, bármit r\[H]ejt az út előt\[C#m]tem,
-    \[A] Hadd zengjek \[E]este is majd \[H4]há\[H]lá\[E]val. \[E4] \[E]
+    Egy \[G]új nap k\[D]él, és már \[A]ébred \[Hm]minden,
+    \[G] Itt az id\[D]ő, hogy \[A]áldja\[Hm]lak,
+    És \[G]bármi \[D]ér, bármit r\[A]ejt az út előt\[Hm]tem,
+    \[G] Hadd zengjek \[D]este is majd \[A4]há\[A]lá\[D]val. \[D4] \[D]
   \endverse
 
   \beginverse*
