--- a/songs/mert-tudom.tex
+++ b/songs/mert-tudom.tex
@@ -8,7 +8,7 @@
   \beginchorus
     Mert az \[D]angyalok \[G]visznek Őhoz\[D]zá,
     s a po\[F#m]kol e\[Hm]rői sem \[G]állítnak \[A]meg. \[A4] \[A]
-    Nem \[G]számít, ha hegyte\[D]tőn állok meg, vagy a \[Hm]sík ten\[G]ger part\[D]j\[A]án,
+    Nem \[G]számít, ha hegyte\[D]tőn állok meg, vagy a \[Hm]sík ten\[G]ger part\[A]ján,
     Mert az \[D]Úr alkotta \[Hm]mindezt, és \[G]minden az Ö\[A]vé.
   \endchorus
 
@@ -19,6 +19,10 @@
 
   \beginverse*
     Refrén
+  \endverse
+
+  \beginverse
+    És tu^dom, semmi ^nem szakaszthat ^el az én ^Uram szerelmé^től.
   \endverse
 
 \endsong
