--- a/songs.tex
+++ b/songs.tex
@@ -10,6 +10,7 @@
 \input{songs/atya-teremto.tex}
 \input{songs/atyam-ket-kezedben.tex}
 \input{songs/atyam-tied-vagyok.tex}
+\input{songs/ave-maria.tex}
 \input{songs/beke-napja-kozel.tex}
 \input{songs/bizom-benned.tex}
 \input{songs/boldogsag-orom.tex}
@@ -19,11 +20,13 @@
 \input{songs/en-uram-en-istenem.tex}
 \input{songs/feny-ami-bennem-eg.tex}
 \input{songs/foltamadt-alleluja.tex}
+\input{songs/gyertek-dicserjuk-egyutt.tex}
 \input{songs/ha-jon-az-ur.tex}
 \input{songs/halat-adok-az-esti-oran.tex}
 \input{songs/halat-adok-hogy-itt-a-reggel.tex}
 \input{songs/hus-ver-templom.tex}
 \input{songs/im-itt-jon-o.tex}
+\input{songs/ime-az-isten-satora.tex}
 \input{songs/indulj-a-vilagba.tex}
 \input{songs/indulj-es-menj.tex}
 \input{songs/itt-vagyok-most-jo-uram.tex}
@@ -66,6 +69,7 @@
 \input{songs/rejts-most-el.tex}
 \input{songs/szentlelek-jojj.tex}
 \input{songs/szeretem-orokke.tex}
+\input{songs/taizei-alleluja.tex}
 \input{songs/tancolj-az-urnak.tex}
 \input{songs/terad-var-egy-szep-orszag.tex}
 \input{songs/teremts-bennem.tex}
