--- a/songs-mass/uram-irgalmazz-k159.tex
+++ b/songs-mass/uram-irgalmazz-k159.tex
@@ -1,6 +1,6 @@
-\beginsong{Uram, irgalmazz}
+\beginsong{Uram, irgalmazz - !!}
 [
-  li={Kék könyv / 159 alapján.}
+  li={Kék könyv / 159.}
 ]
 
   \ifchorded
