Added songs with Eszter

--- a/songs.tex
+++ b/songs.tex
@@ -4,6 +4,7 @@
 \input{songs/aldjad-en-lelkem-az-urat.tex}
 \input{songs/aldjatok-az-urat.tex}
 \input{songs/aldott-legy-uram.tex}
+\input{songs/alleluja.tex}
 \input{songs/almaimbol-lelkembol.tex}
 \input{songs/antioch-dal.tex}
 \input{songs/aroni-aldas.tex}
@@ -67,13 +68,14 @@
 \input{songs/peter-ne-sirj.tex}
 \input{songs/rajta-dicserjetek-az-ur-nevet.tex}
 \input{songs/rejts-most-el.tex}
+\input{songs/sotet-fenn-az-eg.tex}
 \input{songs/szentlelek-jojj.tex}
 \input{songs/szeretem-orokke.tex}
-\input{songs/taizei-alleluja.tex}
 \input{songs/tancolj-az-urnak.tex}
 \input{songs/terad-var-egy-szep-orszag.tex}
 \input{songs/teremts-bennem.tex}
 \input{songs/tied-a-dicsoseg.tex}
+\input{songs/tied-vagyunk.tex}
 \input{songs/uram-tehozzad-futok.tex}
 \input{songs/urra-var-a-szivunk.tex}
 \input{songs/utad-var-rad.tex}
